[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61",
    "setuptools-scm[toml]>=6.2.3",
]

[project]
name = "catch-a-train"
description = "catch-a-train: Train Station Finder"
keywords = [
    "commute",
    "direction",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}
dynamic = ["version"]
dependencies = [
    "requests==2.32.2",
    "fastapi==0.115.9",
    "redis==5.2.1",
    "twilio==9.4.6",
    "geopy==2.4.1",
    "fastkml==1.1.0",
    "prometheus_client==0.21.1"
]

[project.optional-dependencies]
dev = ["coverage==7.4.3", "pytest==8.0.2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
